# raytraycer

./: Cargo.toml
src/: camera.rs  geometry.rs  geometry2.rs  main.rs  renderer.rs  scene.rs  sdl.rs  sphere.rs  utils.rs
src/geometry/: material.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
src/scene/: camera.rs  light.rs  mod.rs
src/utils/: material_factory.rs  mod.rs  rgb.rs
