[package]
name = "raytracing"
version = "0.1.0"
authors = ["Aliaksei Labkovich <aliaksei.labkovich@itechart-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23.12"
num_cpus="1.10.1"
threadpool="1.8.1"

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]